# minichord

./: .ROADMAP.md.kate-swp  .gitignore  README.md  ROADMAP.md  archivo de prueba.mchord  packages_available_debian12_pyqt6.txt  packages_available_debian12_python3.txt  pyproject.toml
ChordPages/: README.md
ChordPages_v3/: ROADMAP.md  chord_autoscroll.py
ChordPages_v3/chordpages/: .gitignore  .gitmodules  pyproject.toml
ChordPages_v3/chordpages/chordpages/: __init__.py  autosave.py  backup.py  fonts.py  main_window.py  recovery.py  resources.py  settings.py  theme.py
ChordPages_v3/chordpages/chordpages/document/: __init__.py  layout.py  pagination.py  text_file.py  transpose.py
ChordPages_v3/chordpages/chordpages/ui/: __init__.py  preferences_dialog.py  recovery_dialog.py
ChordPages_v3/chordpages/tests/: conftest.py  test_autosave.py  test_backup.py  test_chordpro_parser.py  test_document_dom.py  test_document_layout.py  test_document_model.py  test_document_structure.py  test_i18n.py  test_lyric_syllables.py  test_page_editor.py  test_page_layout.py  test_pagination.py  test_recovery.py  test_snapshot.py
ChordPages_v3/chordpages/translations/: chordpages_es.ts
ROADMAP-Backup/: ROADMAP-Backup.md
minichord/: __init__.py  __main__.py  app.py  autosave.py  backup.py  i18n.py  main_window.py  recovery.py  resources.py  settings.py  snapshot.py  theme.py
miniconversor/: ROADMAP_miniConversor.md
tests/: test_autosave.py  test_backup.py  test_chordpro_parser.py  test_chordpro_renderer.py  test_document_dom.py  test_document_layout.py  test_document_model.py  (+13 more)
(+46 files in other folders)
