[build-system]
requires = ["setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
name = "chordpages"
version = "0.1.0"
description = "A lightweight WYSIWYG ChordPro-oriented word processor."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
chordpages = "chordpages.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chordpages*"]

[tool.setuptools.package-data]
chordpages = ["assets/*.svg"]

[tool.setuptools.data-files]
"share/chordpages/translations" = ["translations/*.qm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
